--- a/app/index.html
+++ b/app/index.html
@@ -1,80 +1,208 @@
-<!doctype html>
-<html>
-  <head>
-    <title>LonAndTracy.com</title>
 
-    <link rel="stylesheet" href="/css/app.css">
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="utf-8" />
+  <meta name="author" content="Script Tutorials" />
+  <title>LonAndTracy.com</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
+  <!-- attach CSS styles -->
+  <link href="/bower_components/bootstrap/dist/css/bootstrap-darkly.min.css" rel="stylesheet">
+  <link href="css/app.css" rel="stylesheet" />
+</head>
+<body>
+
+  <!-- navigation panel -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-main">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">LonAndTracy.com</a>
       </div>
-    </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      <div class="collapse navbar-collapse" id="navbar-collapse-main">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#information">Information</a></li>
+          <li><a href="#google_map">Contact</a></li>
+          <li><a href="#photos">Photos</a></li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+  <!-- first section - Home -->
+  <div id="home" class="home">
+    <div class="text-vcenter">
+      <h1 id="countdown"></h1>
+      <h3>Countdown To The Event!</h3>
+      <!-- <a href="#about" class="btn btn-default btn-lg">Continue</a> -->
+    </div>
+  </div>
+  <!-- /first section -->
+
+  <!-- second section - About -->
+  <div id="about" class="pad-section">
+    <div class="container">
+      <div class="row">
+        <!-- <div class="col-sm-6">
+          <img src="images/logo.png" alt="" />
+        </div> -->
+        <div class="col-sm-6 text-center">
+          <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet.</h2>
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum metus et ligula venenatis, at rhoncus nisi molestie. Pellentesque porttitor elit suscipit massa laoreet metus.</p>
+        </div>
       </div>
     </div>
+  </div>
+  <!-- /second section -->
 
+  <!-- third section - Services -->
+  <div id="services" class="pad-section">
     <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      <h2 class="text-center">Our Services</h2> <hr />
+      <div class="row text-center">
+        <div class="col-sm-3 col-xs-6">
+          <i class="glyphicon glyphicon-cloud"> </i>
+          <h4>Service 1</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-sm-3 col-xs-6">
+          <i class="glyphicon glyphicon-leaf"> </i>
+          <h4>Service 2</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <i class="glyphicon glyphicon-phone-alt"> </i>
+          <h4>Service 3</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <i class="glyphicon glyphicon-bullhorn"> </i>
+          <h4>Service 4</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet. Donec in sem cras amet.</p>
         </div>
       </div>
+    </div>
+  </div>
+  <!-- /third section -->
 
-      <hr>
+  <!-- fourth section - Information -->
+  <div id="information" class="pad-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">Additional information</h2>
+            </div>
+            <div class="panel-body lead">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">Additional information</h2>
+            </div>
+            <div class="panel-body lead">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /fourth section -->
 
-      <footer>
-        <p>&copy; 2016 Company, Inc.</p>
-      </footer>
-    </div> <!-- /container -->
+  <!-- fifth section -->
+  <div id="services" class="pad-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <h3>Parallax scrolling effect is in action</h3>
+          <h4>The next is the address on Google maps</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /fifth section -->
 
+  <!-- google map -->
+  <div id="google_map"></div>
+  <!-- /google map -->
 
-    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <div id="photos" class="pad-section">
+    <div class="container">
+      <div class="row">
 
+        <div id="carousel-example-generic" class="carousel" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
 
-    <script src="/js/app.js"></script>
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <div class="row">
+                <img class="col-md-4 slide" src="https://lh3.googleusercontent.com/UD3oq_15PWazVYtdSf8N8v1IMYWpzZvPzb_aXGVRfOkvdfHk9Azpvdavl3vrOWfNDZJFQvstyyuinf-QatMUu66FVX0fZD9LmkirMbVjTgv4d5VCNM7wJgZnBsouotgf8-V9Sg">
+                <img class="col-md-4 slide" src="https://lh3.googleusercontent.com/Qzkk_OzFnvwP7kMY0LtolV4lVHpZCf00pm46-RGWG8QyEBEQmS3hWkkKcPING0h1JfeG9RcA6YWqLOH048bUqU1JB86BDX50aOuanuN3YjJnWa2oTKe5vK9gtWr8ZvRwWbjoXg">
+                <img class="col-md-4 slide" src="https://lh3.googleusercontent.com/UD3oq_15PWazVYtdSf8N8v1IMYWpzZvPzb_aXGVRfOkvdfHk9Azpvdavl3vrOWfNDZJFQvstyyuinf-QatMUu66FVX0fZD9LmkirMbVjTgv4d5VCNM7wJgZnBsouotgf8-V9Sg">  
+              </div>
+              
+            </div>
+            <div class="item">
+              <div class="row">
+                <img class="col-md-4 slide" src="https://lh3.googleusercontent.com/Qzkk_OzFnvwP7kMY0LtolV4lVHpZCf00pm46-RGWG8QyEBEQmS3hWkkKcPING0h1JfeG9RcA6YWqLOH048bUqU1JB86BDX50aOuanuN3YjJnWa2oTKe5vK9gtWr8ZvRwWbjoXg">
+                <img class="col-md-4 slide" src="https://lh3.googleusercontent.com/UD3oq_15PWazVYtdSf8N8v1IMYWpzZvPzb_aXGVRfOkvdfHk9Azpvdavl3vrOWfNDZJFQvstyyuinf-QatMUu66FVX0fZD9LmkirMbVjTgv4d5VCNM7wJgZnBsouotgf8-V9Sg">
+                <img class="col-md-4 slide" src="https://lh3.googleusercontent.com/Qzkk_OzFnvwP7kMY0LtolV4lVHpZCf00pm46-RGWG8QyEBEQmS3hWkkKcPING0h1JfeG9RcA6YWqLOH048bUqU1JB86BDX50aOuanuN3YjJnWa2oTKe5vK9gtWr8ZvRwWbjoXg">  
+              </div>
+            </div>
+          </div>
 
-  </body>
+          
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="stuff" class="pad-section">
+    <h1>TEST</h1>
+  </div>
+
+  <!-- footer -->
+  <footer>
+    <hr />
+    <div class="container">
+      <p class="text-right">Copyright &copy; Your Company 2014</p>
+    </div>
+  </footer>
+  <!-- /footer -->
+
+  <!-- attach JavaScripts -->
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="//maps.google.com/maps/api/js?sensor=true"></script>
+  <script src="js/app.js"></script>
+
+</body>
 </html>
