added more content, pictures, tweaked css

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
           <li><a href="#agenda">Agenda</a></li>
           <li><a href="#accomodations">Accomodations</a></li>
           <li><a href="#activities">Activities</a></li>
-          <li><a href="#bridalparty">Bridal Party</a></li>
+          <li><a href="#bparty">Bridal Party</a></li>
           <li><a href="#registry">Registy</a></li>
           <li><a href="#photos">Photos</a></li>
         </ul>
@@ -75,7 +75,7 @@
           <a href="#agenda" class="btn navbutton btn-primary">Agenda</a>
           <a href="#accomodations" class="btn navbutton btn-success">Accomodations</a>
           <a href="#activities" class="btn navbutton btn-info">Activities</a>
-          <a href="#bridalparty" class="btn navbutton btn-warning">Bridal Party</a>
+          <a href="#bparty" class="btn navbutton btn-warning">Bridal Party</a>
           <a href="#registry" class="btn navbutton btn-danger">Registry</a>
           <a href="#photos" class="btn navbutton btn-default">Photos</a>
         </p>
@@ -272,90 +272,143 @@
 
   <div id="bpartycontent" class="bparty pad-section">
     <div class="container">
-      <h2 class="text-center">Bridal Party</h2> <hr />
       <div class="row text-center">
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-danger">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Tiffany Godfrey</h1>
             </div>
-            <div class="panel-body lead">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            <div class="panel-body"><p>
+              Tracy's sister-in-law and matron of honor.  Tracy first met her when her brother Tom hosted her and two college girlfriends on Spring Break in Boston (during a snow storm)!   Fast forward 13 years, a dog, two nephews and many fun stories later...they now live 15 minutes away and she feels like Tiffany is as much her sister as Tom is her brother. They live here in Livermore, maybe a mile from our venue.</p>
             </div>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-danger">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Erin Trembly</h1>
             </div>
-            <div class="panel-body lead">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            <div class="panel-body">
+              Erin is my sister and she first met Tracy when she came to visit me in CA.  Erin and her husband, Levi, flip homes in Montrose, CO, our hometown.  She is also a massage therapist and new mom to their baby girl, Maggie (born March 8?, 2017)    Maybe you should add more personal here?? 
             </div>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-danger">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Pam (Godfrey) Garner</h1>
             </div>
-            <div class="panel-body lead">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            <div class="panel-body">
+              <div class="thumbnail">
+                <img src="/pics/pam.jpg" alt="...">
+              </div>
+              Pam is Tracy's cousin. Pam used to babysit Tracy back in the day. One time when Tracy was in 4th grade Pam decided to give her a homemade perm.  To this day it was the best perm she ever had!  Despite living 3,000 miles apart they still keep in touch.  Pam and her family would be sure to meet Tracy's family every year at their annual family vacation on Sanibel Island, Florida.  She lives in Fort Lauderdale, FL and 'unfortunately' is an FSU grad. (Go Gators!) 
             </div>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-danger">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Melissa (Albers) Garon - aka. Albie</h1>
             </div>
-            <div class="panel-body lead">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+            <div class="panel-body">
+              Albie is one of Tracy's best friends.  They met in San Francisco the night Tracy decided to join a group of people who had a limo going to see a country concert.  Over the next 12 years or so they made too many great memories to list here (and others that shouldn't be!) Now, Albie lives just north of SF and is married to Jeff.  They have a son, Cole (2) and "Thumper" on the way (due at the end of May). 
             </div>
           </div>
         </div>
       </div>
       <div class="row text-center">
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Cody Manganello</h1>
             </div>
-            <div class="panel-body lead">
+            <div class="panel-body">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
             </div>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Levi Trembly</h1>
             </div>
-            <div class="panel-body lead">
+            <div class="panel-body">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
             </div>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Tom Godfrey</h1>
             </div>
-            <div class="panel-body lead">
+            <div class="panel-body">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
             </div>
           </div>
         </div>
         <div class="col-sm-3">
-          <div class="panel panel-default">
+          <div class="panel panel-primary">
             <div class="panel-heading">
-              <h2 class="panel-title">Additional information</h2>
+              <h1 class="panel-title">Paul Rooney</h1>
             </div>
-            <div class="panel-body lead">
+            <div class="panel-body">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
             </div>
           </div>
         </div>
+      </div>
+      <div class="row text-center col-sm-10 col-sm-offset-1">
+        <div class="col-sm-4">
+          <div class="panel panel-warning">
+            <div class="panel-heading">
+              <h1 class="panel-title">Jenna Leo</h1>
+            </div>
+            <div class="panel-body">
+              <div class="thumbnail">
+                <img src="/pics/jennal.jpg" alt="...">
+                <div class="caption">
+                  <h4>Flower Girl</h4>
+                </div>
+              </div>
+              Jenna is Tracy's second cousin, 5 years old and lives in Atlanta, GA. She is a super American Girl dolls fan and what looks like a pro softball player. As you can see she is just adorable and we are delighted to have her in our wedding. 
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel panel-warning">
+            <div class="panel-heading">
+              <h1 class="panel-title">Dylan Godfrey</h1>
+            </div>
+            <div class="panel-body">
+              <div class="thumbnail">
+                <img src="/pics/dylan.jpg" alt="...">
+                <div class="caption">
+                  <h4>Junior Groomsman</h4>
+                </div>
+              </div>
+              Dylan is Tracy's oldest nephew.  He will be 8 year old in August and lives in Livermore, CA.  He just finished his first basketball season and is on to baseball season #3.  He has fun on the court and field, but showing real promise in his video gaming skills and just cannot get enough of his iPhone!  
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="panel panel-warning">
+            <div class="panel-heading">
+              <h1 class="panel-title">Brody Godfrey</h1>
+            </div>
+            <div class="panel-body">
+              <div class="thumbnail">
+                <img src="/pics/brody.jpg" alt="...">
+                <div class="caption">
+                  <h4>Ring Bearer</h4>
+                </div>
+              </div>
+              Brody's is Tracy's youngest nephew at 5 years old. He is Dylan's brother and also lives just around the corner.  He has just started his first baseball season and could not be happier.  He has watched Dylan the 2 previous years and has already hit a home run! 
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </div>
