--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
     <div class="row">
       <div class="col-sm-12 text-center">
         <h2>Welcome To Our Site</h2>
-        <p class="lead">Thank you for stopping by. We cannot wait to celibrate our special day with you. Please check back often as we finalize details.</p>
+        <p class="lead">Thank you for stopping by. We cannot wait to celebrate our special day with you. Please check back often as we finalize details.</p>
       </div>
       </div>
       <div class="row">
