--- a/app/index.html
+++ b/app/index.html
@@ -374,6 +374,33 @@
             </div>
           </div>
         </div>
+
+        <div class="col-sm-3">
+          <div class="panel panel-danger">
+            <div class="panel-heading">
+              <h1 class="panel-title">Melissa Garon - aka. Albie</h1>
+            </div>
+            <div class="panel-body">
+              <div class="thumbnail">
+                <img src="/pics/albie.jpg" alt="...">
+                <div class="caption">
+                  <h4>Bridesmaid</h4>
+                </div>
+              </div>
+              <!-- Albie is one of Tracy's best friends.  They met in San Francisco the night Tracy decided to join a group of people who had a limo going to see a country concert.  Over the next 12 years or so they made too many great memories to list here (and others that shouldn't be!) Now, Albie lives just north of SF and is married to Jeff.  They have a son, Cole (2) and "Thumper" on the way (due at the end of May).  -->
+
+              <ul>
+                <li>Tracy's Best Friend</li>
+                <li>HR for Adobe</li>
+                <li>Mother of 1 (soon to be 2)</li>
+                <li>Partner in crime!</li>
+                <li>Lives in Marin CA.</li>
+              </ul>
+
+            </div>
+          </div>
+        </div>
+
         <div class="col-sm-3">
           <div class="panel panel-danger">
             <div class="panel-heading">
@@ -399,31 +426,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
-          <div class="panel panel-danger">
-            <div class="panel-heading">
-              <h1 class="panel-title">Melissa Garon - aka. Albie</h1>
-            </div>
-            <div class="panel-body">
-              <div class="thumbnail">
-                <img src="/pics/albie.jpg" alt="...">
-                <div class="caption">
-                  <h4>Bridesmaid</h4>
-                </div>
-              </div>
-              <!-- Albie is one of Tracy's best friends.  They met in San Francisco the night Tracy decided to join a group of people who had a limo going to see a country concert.  Over the next 12 years or so they made too many great memories to list here (and others that shouldn't be!) Now, Albie lives just north of SF and is married to Jeff.  They have a son, Cole (2) and "Thumper" on the way (due at the end of May).  -->
-
-              <ul>
-                <li>Tracy's Best Friend</li>
-                <li>HR for Adobe</li>
-                <li>Mother of 1 (soon to be 2)</li>
-                <li>Huge St. Patricks day fan!</li>
-                <li>Lives in Marin CA.</li>
-              </ul>
-
-            </div>
-          </div>
-        </div>
+        
         <div class="col-sm-3">
           <div class="panel panel-danger">
             <div class="panel-heading">
