updated meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,11 @@
 <html lang="en" >
 <head>
   <meta charset="utf-8" />
+
+  <meta name="description" content="Welcome to Lon Hutt and Tracy Godfrey's Wedding Website! View photos, directions, activities, and more!">
+  <meta name="keywords" content="wedding,lon,tracy,marriage,photos">
+  <meta name="author" content="Lon Hutt">
+
   <title>Lon And Tracy Wedding Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
