--- a/app/index.html
+++ b/app/index.html
@@ -424,7 +424,7 @@
               <h2 class="panel-title">Thursday October 5<sup>th</sup></h2>
             </div>
             <div class="panel-body">
-              Following the rehersal dinner we would like to invite all of our guests to meet us for a drink at the <a href="https://www.firststreetalehouse.com/" rel="noopener" target="_blank">First Street Alehouse</a> in downtown Livermore. We plan to arrive around 8pm.
+              Following the rehersal dinner we will be having drinks at the <a href="https://www.firststreetalehouse.com/" rel="noopener" target="_blank">First Street Alehouse</a> in downtown Livermore. If you are in town please feel free to drop by around 8pm.
               <br/><br/>
               <address>
                 Village Square Shopping Center<br/>
@@ -442,7 +442,7 @@
               <h2 class="panel-title">Friday October 6<sup>th</sup></h2>
             </div>
             <div class="panel-body">
-              The ceremony and reception will be held at <a href="https://www.laspositasvineyards.com/" rel="noopener" target="_blank">Las Positas Vineyards</a> in Livermore, CA. <br/><br/>
+              The ceremony and reception will be held at <a href="https://www.laspositasvineyards.com/" rel="noopener" target="_blank">Las Positas Vineyards</a> in Livermore, CA. The attire is semi-formal.  Weather permitting the ceremony will be outside and the reception will be held indoors. Respectfully, our wedding will be an adults only affair. We are happy to help find babysitting options in the area. Please let us know if you need assistance.<br/><br/>
 
               <address>
                 1828 Wetmore Road<br/>
@@ -453,6 +453,28 @@
           </div>
         </div>
       </div>
+
+      <div class="row text-center">
+        <div class="col-sm-offset-1 col-sm-10">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">Saturday October 7<sup>th</sup></h2>
+            </div>
+            <div class="panel-body">
+              Bob and Ruth Godfrey invite you to their home on Saturday at 11:00 AM for brunch. We would love to see you all one last time before we leave for our honeymoon! The community is gated so be sure to enter through the Sonoma Gate located at Vineyards Parkway and Zinfandel Dr. Please follow the instructions on the box to enter or type '2154'. Either way will prompt a call to the residence.<br/><br/>
+
+              <a href="https://goo.gl/maps/KDfGsyN2ugE2" rel="noopener" target="_blank">For the best route, please click here</a><br/><br/>
+
+              <address>
+                1587 California Trail<br/>
+                Brentwood, CA 94513
+              </address>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
