updated registry, updated head colors

--- a/app/index.html
+++ b/app/index.html
@@ -80,9 +80,9 @@
           <a href="#bparty" class="btn navbutton btn-warning">Bridal Party</a>
           <a href="#agenda" class="btn navbutton btn-primary">Agenda</a>
           <a href="#accomodations" class="btn navbutton btn-success">Accomodations</a>
-          <a href="#activities" class="btn navbutton btn-info">Activities</a>
+          <a href="#activities" class="btn navbutton btn-danger">Activities</a>
           
-          <a href="#registry" class="btn navbutton btn-danger">Registry</a>
+          <a href="#registry" class="btn navbutton btn-info">Registry</a>
           <a href="#photos" class="btn navbutton btn-default">Photos</a>
         </p>
       </div>
@@ -786,36 +786,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-sm-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h1 class="panel-title">Misc</h1>
-            </div>
-            <div class="panel-body">
-              <table class="table table-condensed">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>Map</th>
-                    <th>Drive Time</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><a href="https://www.exploratorium.edu/" rel="noopener" target="_blank">Exploratorium</a></td>
-                    <td><a class="btn btn-primary btn-xs" rel="noopener" target="_blank" href="https://goo.gl/maps/NA1vJKRaZxx" role="button">Map</a></td>
-                    <td><p><span class="label label-warning">Medium</span></p></td>
-                  </tr>
-                  <tr>
-                    <td><a href="http://www.sfzoo.org/" rel="noopener" target="_blank">SF Zoo</a></td>
-                    <td><a class="btn btn-primary btn-xs" rel="noopener" target="_blank" href="https://goo.gl/maps/mGFHqooTX8D2" role="button">Map</a></td>
-                    <td><p><span class="label label-warning">Medium</span></p></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div> -->
+        
       </div>
     </div>
   </div>
@@ -833,7 +804,8 @@
   <div id="registrycontent" class="pad-section">
     <div class="container">
       <div class="row text-center">
-        <div class="alert alert-warning" role="alert">Please check back later for details!</div>
+        <h3><a id="zlink" class="col-sm-4 col-sm-offset-1 btn btn-primary btn-lg" rel="noopener" target="_blank" href="https://www.zola.com/registry/tracyandlon">Zola</a></h3>
+        <h3><a id="mlink" class="col-sm-4 col-sm-offset-2 btn btn-danger btn-lg" rel="noopener" target="_blank" href="https://www.macys.com/wgl/registry/guest/6794177">Macy's</a></h3>
       </div>
     </div>
   </div>
