fixed spelling errors

--- a/app/index.html
+++ b/app/index.html
@@ -173,7 +173,7 @@
               <ul>
                 <li>Tracy's Best Friend</li>
                 <li>HR for Adobe</li>
-                <li>Mother of 1 (soon to be 2)</li>
+                <li>Mother of 2</li>
                 <li>Partner in crime!</li>
                 <li>Lives in Marin CA.</li>
               </ul>
@@ -226,7 +226,7 @@
                 <li>Tracy's Cousin</li>
                 <li>Real estate Agent &amp; Teacher</li>
                 <li>Mother of 3</li>
-                <li>Huge FSU Fan (unfortunetly)</li>
+                <li>Huge FSU Fan (unfortunately)</li>
                 <li>Lives in Fort Lauderdale FL.</li>
               </ul>
               
@@ -319,7 +319,7 @@
               <ul>
                 <li>Lon's Friend</li>
                 <li>Manager at MongoDB</li>
-                <li>Almost Father of 1</li>
+                <li>Father of 1</li>
                 <li>Fellow beer enthusiast</li>
                 <li>Lives in Sunnyvale CA.</li>
               </ul>
@@ -424,7 +424,7 @@
               <h2 class="panel-title">Thursday October 5<sup>th</sup></h2>
             </div>
             <div class="panel-body">
-              Following the rehersal dinner we will be having drinks at the <a href="https://www.firststreetalehouse.com/" rel="noopener" target="_blank">First Street Alehouse</a> in downtown Livermore. If you are in town please feel free to drop by around 8pm.
+              Following the rehearsal dinner we will be having drinks at the <a href="https://www.firststreetalehouse.com/" rel="noopener" target="_blank">First Street Alehouse</a> in downtown Livermore. If you are in town please feel free to drop by around 8pm.
               <br/><br/>
               <address>
                 Village Square Shopping Center<br/>
@@ -482,7 +482,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 text-center">
-          <h1>Accomodations</h1>
+          <h1>Accommodations</h1>
         </div>
       </div>
     </div>
@@ -510,7 +510,7 @@
 
               <address>
                 Hampton Inn Livermore<br/>
-                2850 Consititution Dr.<br/>
+                2850 Constitution Dr.<br/>
                 Livermore CA, 94551  
               </address>
               
