couple of small updates to general info

--- a/app/index.html
+++ b/app/index.html
@@ -465,6 +465,8 @@
 
               <a href="https://goo.gl/maps/KDfGsyN2ugE2" rel="noopener" target="_blank">For the best route, please click here</a><br/><br/>
 
+              <p>Please RSVP by emailing Ruth Godfrey at <a href="mailto:ruthsg22@gmail.com">ruthsg22@gmail.com</a></p>
+
               <address>
                 1587 California Trail<br/>
                 Brentwood, CA 94513
@@ -528,7 +530,7 @@
               <div class="panel-title">Booking Flights?</div>
             </div>
             <div class="panel-body">
-              We recommend flying into and out of SFO, OAK, or SJC.<small> *see map below</small><br/><br/> If you are planning to arrive on Friday please keep in mind that during rush hour (3-5pm) expect the drive to take <b>at least</b> 2 hours (not including rental pick-up).
+              We recommend flying into and out of SFO, OAK, or SJC and renting a car.<small> *see map below</small><br/><br/> If you are planning to arrive on Friday please keep in mind that during rush hour (3-5pm) expect the drive to take <b>at least</b> 2 hours (not including rental pick-up).
             </div>
           </div>
         </div>
@@ -718,6 +720,11 @@
                     <td><a href="http://www.scmbrew.com/" rel="noopener" target="_blank">Santa Cruz Mountain Brewing</a></td>
                     <td><a class="btn btn-primary btn-xs" rel="noopener" target="_blank" href="https://goo.gl/maps/mTJypRF9Rcv" role="button">Map</a></td>
                     <td><p><span class="label label-success">$</span></p></td>
+                  </tr>
+                  <tr>
+                    <td><a href="http://www.samschowderhouse.com/" rel="noopener" target="_blank">Sam's Chowder House</a></td>
+                    <td><a class="btn btn-primary btn-xs" rel="noopener" target="_blank" href="https://goo.gl/maps/LS6xE3cV5iv" role="button">Map</a></td>
+                    <td><p><span class="label label-success">$$</span></p></td>
                   </tr>
                 </tbody>
               </table>
