updated spelling, added more details to agenda

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
           <li><a href="#accomodations">Accomodations</a></li>
           <li><a href="#map_header">Map</a></li>
           <li><a href="#activities">Activities</a></li>
-          <li><a href="#registry">Registy</a></li>
+          <li><a href="#registry">Registry</a></li>
           <li><a href="#photos">Photos</a></li>
         </ul>
       </div>
@@ -442,9 +442,14 @@
               <h2 class="panel-title">Friday October 6<sup>th</sup></h2>
             </div>
             <div class="panel-body">
-              The ceremony and reception will be held at <a href="https://www.laspositasvineyards.com/" rel="noopener" target="_blank">Las Positas Vineyards</a> in Livermore, CA. The attire is semi-formal.  Weather permitting the ceremony will be outside and the reception will be held indoors. Respectfully, our wedding will be an adults only affair. We are happy to help find babysitting options in the area. Please let us know if you need assistance.<br/><br/>
+              The ceremony and reception will be held at <a href="https://www.laspositasvineyards.com/" rel="noopener" target="_blank">Las Positas Vineyards</a> in Livermore, CA promptly at 4:30pm. The attire is semi-formal.  Weather permitting the ceremony will be outside and the reception will be held indoors. Respectfully, our wedding will be an adults only affair. We are happy to help find babysitting options in the area. Please let us know if you need assistance.<br/><br/>
+
+              Transportation will be provided from the Hampton Inn leaving promptly at 3:00pm and 3:30pm.  Due to the number of out of town guests we will need to fill the bus on each trip.  Please plan to take the early shuttle to make sure all of our guests are accommodated.
+
+              <br/><br/>
 
               <address>
+                <a href="https://www.laspositasvineyards.com/" rel="noopener" target="_blank">Las Positas Vineyards</a><br/>
                 1828 Wetmore Road<br/>
                 Livermore, CA 94550
               </address>
