updated with after party info

--- a/app/index.html
+++ b/app/index.html
@@ -454,6 +454,17 @@
                 Livermore, CA 94550
               </address>
 
+              <div>
+                We have planned an after party at the Hilton Garden Inn - Lobby Bar across the street from the Hampton Inn. Please join
+                us directly following the reception.
+              </div>
+              </div>
+              <address>
+                <a href="https://goo.gl/maps/M7ZSe9W6jMJ2" rel="noopener" target="_blank">Hilton Garden Inn</a><br/>
+                2801 Constitution Dr<br/>
+                Livermore, CA 94550
+              </address>
+
             </div>
           </div>
         </div>
